# canopy

./: .gitignore  AGENT-CLI.md  AGENT-MCP.md  CLAUDE.md  Cargo.toml  Makefile  README.md  install-service.sh  install.sh
.claude/skills/agentic-development/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
benchmark/: run-ab-test.sh  run-swarm-test.sh
benchmark/results/: n8n-ab-test-20260129.md
canopy-cli/: Cargo.toml
canopy-cli/src/: client.rs  commands.rs  dirty.rs  main.rs  merge.rs  output.rs
canopy-client/: Cargo.toml
canopy-client/src/: lib.rs  merge.rs  predict.rs  provenance.rs  runtime.rs  service_client.rs
canopy-client/src/runtime/: expand.rs  feedback.rs  mod.rs  query_dispatch.rs
canopy-client/tests/: service_integration.rs
canopy-core/: Cargo.toml
canopy-core/src/: capped_map.rs  config.rs  document.rs  error.rs  feedback.rs  generation.rs  git.rs  handle.rs  index.rs  lib.rs  parse.rs  protocol.rs  query.rs  scoring.rs
canopy-core/src/feedback/: mod.rs  store.rs  tests.rs
canopy-core/src/index/: expand.rs  file_discovery.rs  mod.rs  pipeline.rs  search.rs  symbol_cache.rs  test_helpers.rs
canopy-core/src/parse/: bpe.rs  markdown.rs  mod.rs  references.rs  tree_sitter_parse.rs
canopy-core/src/query/: dsl.rs  evidence.rs  executor.rs  mod.rs  params.rs
canopy-mcp/: Cargo.toml
canopy-mcp/src/: main.rs  predict.rs  protocol.rs  schema.rs  tools.rs
canopy-plugin/: .mcp.json  README.md
canopy-plugin/.claude-plugin/: plugin.json
canopy-plugin/skills/canopy/: SKILL.md
canopy-plugin/skills/canopy-search/: SKILL.md
canopy-service/: Cargo.toml
canopy-service/src/: error.rs  evidence.rs  feedback_recording.rs  main.rs  metrics.rs  routes.rs  state.rs
canopy-service/src/evidence/: mod.rs  planning.rs  symbol_extraction.rs
canopy-service/src/routes/: expand.rs  mod.rs  query.rs  repos.rs
canopy-service/tests/: integration.rs
docs/: benchmarking.md  design-anchors.md
