[workspace]
resolver = "2"
members = [
    "canopy-core",
    "canopy-mcp",
    "canopy-cli",
    "canopy-service",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["vu1n"]

[workspace.dependencies]
# Core dependencies
pulldown-cmark = "0.12"
rusqlite = { version = "0.33", features = ["bundled"] }
tiktoken-rs = "0.6"
ignore = "0.4"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.0"

# MCP/Async
tokio = { version = "1", features = ["full"] }

# HTTP Service
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
