[package]
name = "canopy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for canopy token-efficient codebase queries"

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-client = { path = "../canopy-client" }
clap = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
