[package]
name = "canopy-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared client runtime for canopy CLI and MCP"

[dependencies]
canopy-core = { path = "../canopy-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
