[package]
name = "canopy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for token-efficient codebase queries"

[dependencies]
pulldown-cmark = { workspace = true }
rusqlite = { workspace = true }
tiktoken-rs = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Tree-sitter
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
