[package]
name = "canopy-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP service for canopy multi-repo indexing"

[[bin]]
name = "canopy-service"
path = "src/main.rs"

[dependencies]
canopy-core = { path = "../canopy-core" }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
reqwest = { workspace = true }
